Refactor remote address/X-Forwarded-For handling